Get_Started section MOBILE Completed. Svg fixed

--- a/main.css
+++ b/main.css
@@ -387,7 +387,7 @@ body,html{
 
     .Get_Started{
         position:relative;
-        height:1006px;
+        height:1023px;
         width:100%;
         display:flex;
         flex-direction: column;
@@ -449,42 +449,48 @@ body,html{
         position: relative;
         width: 100%;
         height: 564px;
-        margin-top: 12px;
     }
 
     .Get_Started-circles{
-        display: flex;
-        align-items: center;
-    }
-
-    .Get_Started-circle-1{
         position: absolute;
-        background-image: url("/mobile_images/Get_Started-Cirlce-1.svg");
-        background-repeat: no-repeat;
-        top: 121.52px;
-        width: 88%;
-        height: 318.14px;
-        left: 22px;
-        z-index: 1;
-    }
-    .Get_Started-circle-2{
-        position: absolute;
-        background-image: url("/mobile_images/Get_Started-Cirlce-2.svg");
-        background-repeat: no-repeat;
-        top: 42.61px;
         width: 100%;
-        height: 473px;
+        height: 565px;
+        background-image: url("/mobile_images/Get_Started-Circles.png");
+        background-repeat: no-repeat;
         z-index: 1;
     }
-    .Get_Started-phone{
 
+    .Get_Started-phone{
+        position: absolute;
+        background-image: url("/mobile_images/Get_Started-Phone.png");
+        background-repeat: no-repeat;
+        width: 100%;
+        margin-left: 35px;
+        margin-top: 100px;
+        margin-bottom: 63px;
+        height: 480.51px;
+        z-index: 2;   
     }
     
     .Get_Started-bell{
-
+        position: absolute;
+        background-image: url(/mobile_images/Get_Started-Bell-svg.svg);
+        background-repeat: no-repeat;
+        width: 25.15%;
+        height: 100.81px;
+        top: 115px;
+        left: 33.70px;
+        z-index: 3;
     }
 
     .Get_Started-cart{
-
+        position: absolute;
+        background-image: url(/mobile_images/Get_Started-Cart.svg);
+        background-repeat: no-repeat;
+        width: 25.15%;
+        height: 100.81px;
+        top: 364px;
+        left: 233.33px;
+        z-index: 3;
     }
 }
